--- a/style.css
+++ b/style.css
@@ -6,21 +6,58 @@
     box-sizing: border-box;
 }
 
-@font-face {
-    font-family: 'myFont';
-    src: url('./src/FontA.woff') format('woff'),
-        url('./src/FontB.woff') format('woff');
-}
-
 html {
     /* this line of code gives the container div a height to grow */
     height: 100%;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
-#tab-browsing {
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid red;
+}
+
+#content {
+    flex: 1 0 auto;
+}
+
+#inside-home {
+    border: 1px solid blue;
+    /* min-height: 100%; */
+}
+
+#tabbed-browsing {
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
+    border: 1px solid green;
 }
+
 h1 {
-    font-family:'myFont';
+    font-size: clamp(2rem, 1.286rem + 1.905vw, 3rem);
+}
+
+h2 {
+    font-size: clamp(0.75rem, 0.214rem + 1.429vw, 1.5rem);
+    font-weight: lighter;
+}
+
+h3 {
+    font-size: clamp(0.6rem, 0.1rem + 1.333vw, 1.3rem);
+    font-weight: lighter;
+}
+
+#inside-home {
+    max-width: calc(80% - 80px);
+    margin: 0 auto;
+}
+
+footer {
+    /* margin-top: auto; */
+    flex-shrink: 0;
+    max-width: calc(80% - 80px);
+    margin: 0 auto;
+    border: 1px solid pink;
 }
