--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 }
 
 html {
-    /* this line of code gives the container div a height to grow */
     height: 100%;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
@@ -21,11 +20,17 @@ body {
 
 #content {
     flex: 1 0 auto;
+
+    /* test uploading image */
+    background: url('./home-image') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 #inside-home {
     border: 1px solid blue;
-    /* min-height: 100%; */
 }
 
 #tabbed-browsing {
