--- a/src/style.css
+++ b/src/style.css
@@ -19,14 +19,12 @@
 html {
     height: 100%;
     font-family: "Turista Gorda NF W01 Regular";
-    /* font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif */
 }
 
 body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    border: 1px solid red;
     background-color: rgb(38, 38, 38);
 }
 
@@ -35,7 +33,6 @@ body {
 }
 
 .content-box {
-    border: 1px solid blue;
     max-width: calc(80% - 80px);
     margin: 0 auto;
 }
@@ -44,7 +41,6 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    border: 1px solid green;
     font-size: clamp(2rem, 1.286rem + 1.905vw, 3rem);
     color: rgb(233, 210, 0);
     text-align: center;
@@ -55,13 +51,22 @@ body {
     margin-top: 1rem;
 }
 
-.tabbed-options {
+.top-menu-options {
     cursor: pointer;
 }
 
 .images {
     width: 100%;
     max-width: 100%;
+}
+
+ul .active {
+    color: white;
+}
+
+li:hover,
+li:focus {
+    color: white;
 }
 
 .active {
@@ -91,5 +96,4 @@ footer {
     flex-shrink: 0;
     max-width: calc(80% - 80px);
     margin: 0 auto;
-    border: 1px solid pink;
 }
